# CrossBorderML

./: .gitignore  README.md  README.me  environment.yml  pyproject.toml  requirements.txt
data/: README.md
scripts/: README.md  check_environment.py  download_worldbank.py  unzip_data.py
sql/queries/: tables_name.sql
sql/snippets/: countries_name  per_country_wide
sql/snippts/: per_year_select
src/crossborderml/: config.py
src/crossborderml/conf/: indicators.yaml
src/crossborderml/pipeline/: data_validation.py  downloader.py  fetch_extract.py  file_validation.py  ingest.py  load_sql.py  partition_by_country.py  pivot_wide_to_long.py  transform.py  validation.py
src/crossborderml/utils/: io_utils.py  string_utils.py
tests/: test_data_validation.py  test_ingest.py  test_load_sql.py  test_pivot_wide_to_long.py  test_transform.py
